--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
     <button id="openLetterBtn">📩 Open Letter</button>
 
     <div class="letter" id="letter">
-      <h2>To You, Dear Student</h2>
+      <h2>Dear Student,</h2>
       <p>
-        Don't give up.<br><br>
-        Being a student is never easy, but it's worth it.<br>
-        No matter how many challenges come your way, you are strong enough to overcome them.<br><br>
-        Every drop of sweat and sleepless night will someday turn into success.<br>
-        Your effort today is the foundation of your dreams tomorrow.<br><br>
-        Keep going. Hold on. You're closer than you think to achieving what you’ve worked hard for.
+        Don’t give up.<br><br>
+        Being a student is tough, but it’s worth it.<br>
+        No matter how hard life gets, you are stronger than your challenges.<br><br>
+        Every sleepless night, every ounce of effort you give — it all matters.<br>
+        Your hard work will pay off, even if it doesn’t feel like it right now.<br><br>
+        Keep going. Take it one step at a time. Your dreams are waiting for you.
       </p>
-      <p class="from">– A Friend Who Believes in You</p>
+      <p class="from">– A Friend</p>
     </div>
   </div>
 
